# Bank-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
headers/: Bank.hpp  BankAccount.h  Logger.hpp
src/: Bank.cpp  BankAccount.cpp  CMakeLists.txt  Logger.cpp  main.cpp  transaction_log.txt
test/: CMakeLists.txt  test.cpp
